fix: Overlapping buttons when signing a transaction

--- a/src/components/tx-flow/common/TxLayout/styles.module.css
+++ b/src/components/tx-flow/common/TxLayout/styles.module.css
@@ -108,7 +108,15 @@
   /* Height of transaction type title */
   margin-top: 46px;
 }
-
+@media (max-width: 1199.95px) {
+  .backButton {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .step :global(.MuiCardActions-root) {
+    margin-bottom: var(--space-8);
+  }
+}
 @media (max-width: 899.95px) {
   .widget {
     position: absolute;
